--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["sofia escobedo <sofia@escobedo.mx>","Leonardo Cavaletti <impeto.blu@
 python = "^3.12"
 beautifulsoup4 = "^4.9.1"
 colorama = "^0.4.3"
-selenium = "4.15.1"
+selenium = "^4.29.0"
 toml = "^0.10.1"
 html5lib = "^1.1"
 chromedriver = "^2.24.1"
