--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ chromedriver-autoinstaller = "^0.6.4"
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
 pytest = "^8.3.5"
+poetry-plugin-export = "^1.9.0"
 
 [build-system]
 requires = ["poetry>=1.8.4"]
